--- a/src/main/resources/templates/pokefight/partials/fragments.html
+++ b/src/main/resources/templates/pokefight/partials/fragments.html
@@ -1,6 +1,5 @@
-
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns="http://www.w3.org/1999/html" lang="en">
 <head th:fragment="header(title)">
         <meta charset="UTF-8" />
     <title th:text="${title}">title</title>
@@ -25,12 +24,12 @@
             </div>
 
             <div class="navbar nav">
-                <a href="#">About us</a>
-                <a href="#">Contact us</a>
-                <a href="#">Battle</a>
-                <a href="#">Home</a>
-                <a href="#">Profile</a>
-                <a href="#">Sign up</a>
+                <a th:href="@{/about}">About us</a>
+                <a th:href="@{/contact}">Contact us</a>
+                <a th:href="@{/battle}">Battle</a>
+                <a th:href="@{/home}">Home</a>
+                <a th:href="@{/profile}">Profile</a>
+                <a th:href="@{/signup}">Sign up</a>
             </div>
 
 
@@ -61,7 +60,7 @@
 
         </div> <!--container fluid close-->
 </nav>
-</div>
+
 
 
 <div th:fragment="footer">
