moved files. functional finally. need to move files around to make it wokr

--- a/src/main/resources/templates/pokefight/partials/fragments.html
+++ b/src/main/resources/templates/pokefight/partials/fragments.html
@@ -19,8 +19,9 @@
     <div class="container-fluid">
         <!--Brand and toggle get grouped for better mobile display-->
         <div class="navbar-header">
+            <a class="navbar-brand" th:href="@{/}"  style = "font-family:'Orbitron',sans-serif; font-size: 25px; color:#483112">
             <img src="#" width="50px" height="50px" alt="logo.jpg">
-            <a class="navbar-brand" href="#"  style = "font-family:'Orbitron',sans-serif; font-size: 25px; color:#483112"></a>
+            </a>
         </div>
 
         <div class="navbar nav">
@@ -65,7 +66,7 @@
 
 <div th:fragment="footer">
     <span>the footer appears!</span>
-    <script src="../../static/js/jquery-2.x-git.js"></script>
+    <script src="/static/js/jquery-2.x-git.js"></script>
 
 </div>
 
