--- a/src/main/resources/templates/pokefight/profile.html
+++ b/src/main/resources/templates/pokefight/profile.html
@@ -28,7 +28,7 @@
 
 
 <div th:include="pokefight/partials/fragments :: footer"></div>
-<script src="/static/js/jquery-2.x-git.js"></script>
+<!--<script src="/static/js/jquery-2.x-git.js"></script>-->
 <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js" crossorigin="anonymous"></script>
 <script src="/static/js/APIKEY.js"></script>
 <script src="/static/js/Filestack.js"></script>
